js/js.translator/testData/incremental/invalidation/externalOverriddenProperty/main/m.kt
fun test(x: Foo) = x.value

fun box(stepId: Int, isWasm: Boolean): String {
    return test(FooImpl("OK"))
}
